hb_task6_ws/log/build_2024-02-26_14-55-41/hb_taskbonus/stdout_stderr.log
running egg_info
writing ../../build/hb_taskbonus/hb_taskbonus.egg-info/PKG-INFO
writing dependency_links to ../../build/hb_taskbonus/hb_taskbonus.egg-info/dependency_links.txt
writing entry points to ../../build/hb_taskbonus/hb_taskbonus.egg-info/entry_points.txt
writing requirements to ../../build/hb_taskbonus/hb_taskbonus.egg-info/requires.txt
writing top-level names to ../../build/hb_taskbonus/hb_taskbonus.egg-info/top_level.txt
reading manifest file '../../build/hb_taskbonus/hb_taskbonus.egg-info/SOURCES.txt'
writing manifest file '../../build/hb_taskbonus/hb_taskbonus.egg-info/SOURCES.txt'
running build
running build_py
copying hb_taskbonus/controller1.py -> /home/premsai/eyrc23_HB_1282/hb_task6_ws/build/hb_taskbonus/build/lib/hb_taskbonus
running install
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
running install_lib
copying /home/premsai/eyrc23_HB_1282/hb_task6_ws/build/hb_taskbonus/build/lib/hb_taskbonus/controller1.py -> /home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/python3.10/site-packages/hb_taskbonus
byte-compiling /home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/python3.10/site-packages/hb_taskbonus/controller1.py to controller1.cpython-310.pyc
  File "/home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/python3.10/site-packages/hb_taskbonus/controller1.py", line 299
    global i,pen_down, run_complete
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'i' is used prior to global declaration

running install_data
running install_egg_info
removing '/home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/python3.10/site-packages/hb_taskbonus-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/hb_taskbonus/hb_taskbonus.egg-info to /home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/python3.10/site-packages/hb_taskbonus-0.0.0-py3.10.egg-info
running install_scripts
Installing controller1 script to /home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/hb_taskbonus
Installing feedback script to /home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/hb_taskbonus
Installing interp1 script to /home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/hb_taskbonus
Installing map1 script to /home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/hb_taskbonus
Installing nextGoal1 script to /home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/hb_taskbonus
Installing nextGoalfunc script to /home/premsai/eyrc23_HB_1282/hb_task6_ws/install/hb_taskbonus/lib/hb_taskbonus
writing list of installed files to '/home/premsai/eyrc23_HB_1282/hb_task6_ws/build/hb_taskbonus/install.log'
